frontend-react/src/styles/landing.css
/* ... */
.reviews {
  padding: 125px 0 130px;
}
@media (max-width: 1024px) {
  .reviews {
    padding: 100px 0;
  }
}
@media (max-width: 576px) {
  .reviews {
    padding: 64px 0;
  }
}
.reviews__title {
  max-width: 887px;
  margin: 0 0 15px;
  font-family: var(--font-family-display);
  font-weight: 800;
  font-size: 48px;
  color: var(--color-brand-blue-500);
}
@media (max-width: 1024px) {
  .reviews__title {
    font-size: 40px;
  }
}
@media (max-width: 576px) {
  .reviews__title {
    font-size: 32px;
  }
}
.reviews__description {
  margin: 0 0 30px;
  font-family: var(--font-family-sans);
  font-weight: 400;
  font-size: 24px;
  color: var(--color-grey-700);
}
@media (max-width: 1024px) {
  .reviews__description {
    font-size: 20px;
  }
}
@media (max-width: 576px) {
  .reviews__description {
    font-size: 16px;
  }
}
.reviews__slider .swiper {
  overflow: visible;
}
.reviews__slider .swiper-slide {
  -webkit-box-shadow: 0 8px 19px 0 rgba(0, 0, 0, 0.1);
          box-shadow: 0 8px 19px 0 rgba(0, 0, 0, 0.1);
  background-color: #fff;
  height: auto;
}
.reviews__slider-slide {
  padding: 25px 20px;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
      -ms-flex-direction: column;
          flex-direction: column;
  height: 100%;
  -webkit-box-sizing: border-box;
          box-sizing: border-box;
}
.reviews__slider-slide-name {
  margin: 0 0 5px;
  font-family: var(--font-family-sans);
  font-weight: 700;
  font-size: 20px;
  color: var(--color-grey-700);
}
.reviews__slider-slide-type {
  margin: 0 0 20px;
  font-family: var(--font-family-sans);
  font-weight: 400;
  font-size: 16px;
  color: var(--color-grey-700);
  opacity: 0.5;
}
.reviews__slider-slide-text {
  margin: 0 0 20px;
  font-family: var(--font-family-sans);
  font-size: 16px;
  line-height: 1.6;
  color: var(--color-grey-700);
  opacity: 0.8;
  -webkit-box-flex: 1;
      -ms-flex: 1 1 auto;
          flex: 1 1 auto;
}
.reviews__slider-slide-bottom {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between;
}
.reviews__slider-slide-bottom::after {
  content: "";
  display: inline-block;
  width: 58px;
  aspect-ratio: 1;
  background: url(/assets/icons/quote.svg) center/cover no-repeat;
  opacity: 0.3;
  -webkit-transition: opacity ease-out 0.2s;
  transition: opacity ease-out 0.2s;
}
.reviews__slider-slide-rating {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  gap: 5px;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
}
.reviews__slider-slide-rating-star {
  display: inline-block;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
  width: 17px;
  aspect-ratio: 1;
  background: url(/assets/icons/star.svg) center/cover no-repeat;
}
.reviews__slider .swiper-slide-active .reviews__slider-slide-bottom::after {
  opacity: 1;
}
.reviews__slider-controls {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  gap: 30px;
  margin: 40px 0 0;
}
.reviews__slider-controls-prev, .reviews__slider-controls-next {
  display: inline-block;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
  width: 30px;
  aspect-ratio: 1/1;
  background: url(/assets/icons/arrow-next.svg) center/cover no-repeat;
  -webkit-user-select: none;
     -moz-user-select: none;
      -ms-user-select: none;
          user-select: none;
  cursor: pointer;
}
.reviews__slider-controls-prev {
  -webkit-transform: rotate(180deg);
          transform: rotate(180deg);
}
.reviews__slider-controls-next {
  -webkit-transform: rotate(0deg);
          transform: rotate(0deg);
}
.reviews__slider-controls-pagination {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  -webkit-box-align: center;
      -ms-flex-align: center;
          align-items: center;
  -webkit-box-pack: center;
      -ms-flex-pack: center;
          justify-content: center;
  -webkit-box-flex: 0;
      -ms-flex: 0 1 auto;
          flex: 0 1 auto;
  gap: 7px;
  width: auto;
}
.reviews__slider-controls-pagination .swiper-pagination-bullet {
  display: block;
  -webkit-box-flex: 0;
      -ms-flex: 0 0 auto;
          flex: 0 0 auto;
  margin: 0;
  width: 7px;
  height: 7px;
  border-radius: 90px;
  opacity: 1;
  background-color: #ededed;
  -webkit-transition-property: width;
  transition-property: width;
  -webkit-transition-timing-function: ease-out;
          transition-timing-function: ease-out;
  -webkit-transition-duration: 0.4s;
          transition-duration: 0.4s;
}
.reviews__slider-controls-pagination .swiper-pagination-bullet-active {
  width: 35px;
  background-color: var(--color-brand-orange-500);
}

.leave-order {
  padding: 0 0 120px;
}
@media (max-width: 1024px) {
  .leave-order {
    padding-bottom: 90px;
  }
}
@media (max-width: 576px) {
  .leave-order {
    padding-bottom: 70px;
  }
}

.leave-order__title {
  margin: 0 0 30px;
  font-family: var(--font-family-display);
  font-weight: 800;
  font-size: 48px;
  text-align: center;
  color: var(--color-brand-purple-500);
}
@media (max-width: 1024px) {
  .leave-order__title {
    font-size: 40px;
    text-align: center;
  }
}
@media (max-width: 576px) {
  .leave-order__title {
    font-size: 32px;
  }
}
.leave-order__steps {
  position: relative;
}
.leave-order__steps::before {
  content: "";
  position: absolute;
  top: 102px;
  left: 0;
  right: 0;
  z-index: 10;
  display: block;
  width: 100%;
  height: 10px;
  border-radius: 90px;
  background: linear-gradient(147deg, var(--color-brand-blue-500) 0%, #b9e0ff 100%);
}
/* ... */

